--- a/css/style.css
+++ b/css/style.css
@@ -1437,4 +1437,40 @@ footer .container p span {
   width: 100%;
   padding: 20px 20px 0 20px;
 }
+
+.containerAnggota .container .anggota {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.containerAnggota .container .anggota .perAnggota {
+  width: calc(90%/4);
+  margin: 15px 10px;
+}
+
+.containerAnggota .container .anggota .perAnggota img {
+  width: 100%;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 5px;
+}
+
+.containerAnggota .container .anggota .perAnggota p {
+  font-size: .9rem;
+}
+
+.containerAnggota .container .anggota .perAnggota h2 {
+  font-size: 1.2rem;
+}
 /*# sourceMappingURL=style.css.map */
