--- a/css/style.scss
+++ b/css/style.scss
@@ -249,16 +249,11 @@ header {
                 color: var(--putih);
                 margin: 20px 0;
             }
-
-            .cta {
-                a {
-                    // background-color: var(--biru-cerah);
-                }
-            }
         }
 
         .img {
             width: 40%;
+            height: 90%;
 
             img {
                 width: 100%;
