--- a/css/style.css
+++ b/css/style.css
@@ -293,12 +293,11 @@ header .container .menu span:nth-child(2) {
 
 .hero .container .img {
   width: 40%;
-  height: 90%;
 }
 
 .hero .container .img img {
   width: 100%;
-  height: 100%;
+  max-height: 100%;
 }
 
 .title {
@@ -683,6 +682,17 @@ header .container .menu span:nth-child(2) {
   line-height: 25px;
   margin-bottom: 30px;
   color: var(--putih);
+}
+
+.footer .container .box p span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: var(--putih);
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .footer .container .box a {
