--- a/css/style.scss
+++ b/css/style.scss
@@ -253,11 +253,10 @@ header {
 
         .img {
             width: 40%;
-            height: 90%;
 
             img {
                 width: 100%;
-                height: 100%;
+                max-height: 100%;
             }
         }
     }
@@ -590,6 +589,12 @@ header {
                 line-height: 25px;
                 margin-bottom: 30px;
                 color: var(--putih);
+
+                span {
+                    display: flex;
+                    color: var(--putih);
+                    flex-direction: column;
+                }
             }
 
             a {
