--- a/css/riset/riset.scss
+++ b/css/riset/riset.scss
@@ -119,6 +119,15 @@ section {
     width: 100%;
 }
 
+
+.fa {
+    width: 1em;
+    height: 1em;
+    display: inline-block;
+    font-size: inherit;
+    vertical-align: -0.125em;
+}
+
 .container {
     width: 100%;
     height: 100%;
@@ -407,10 +416,13 @@ section {
             .icon {
                 font-size: 1.7rem;
                 cursor: pointer;
-                transition: .1s;
 
-                &:hover {
-                    color: var(--biru-cerah);
+                .fa {
+                    transition: .1s;
+                }
+
+                &:hover .fa {
+                    fill: var(--biru-cerah);
                 }
             }
         }
