--- a/css/style.scss
+++ b/css/style.scss
@@ -407,6 +407,7 @@ header {
     }
 
     .jawaban {
+        width: 100%;
         padding: 20px;
         display: none;
         border-radius: 7px;
@@ -481,8 +482,12 @@ header {
                     align-items: center;
                     justify-content: center;
                     border-radius: 50%;
-                    color: var(--putih);
+                    // color: var(--putih);
                     background-color: var(--putih-f2);
+
+                    &>* {
+                        fill: var(--putih) !important;
+                    }
                 }
             }
         }
@@ -685,7 +690,10 @@ footer {
 
             .icon {
                 font-size: 2.5rem;
-                color: var(--putih);
+
+                &>*{
+                    fill: var(--putih) !important;
+                }
             }
 
             strong {
