--- a/css/riset/riset.css
+++ b/css/riset/riset.css
@@ -416,6 +416,7 @@ section {
 }
 
 .modalContainer .modal .modal-title .icon .fa {
+  fill: var(--hitam-santai);
   -webkit-transition: .1s;
   transition: .1s;
 }
@@ -428,6 +429,10 @@ section {
   overflow-y: auto;
   padding: 20px;
   border-bottom: var(--border);
+}
+
+.modalContainer .modal .modal-body .fa {
+  fill: var(--hitam-santai);
 }
 
 .modalContainer .modal .modal-body .perFilterProgram {
