--- a/css/style.scss
+++ b/css/style.scss
@@ -193,6 +193,7 @@ header {
             a {
                 font-weight: 600;
                 color: #525252;
+                font-size: 1.2rem;
 
                 &:hover,
                 &.active {
@@ -691,7 +692,7 @@ footer {
             .icon {
                 font-size: 2.5rem;
 
-                &>*{
+                &>* {
                     fill: var(--putih) !important;
                 }
             }
