--- a/css/style.css
+++ b/css/style.css
@@ -487,6 +487,12 @@ header .container .menu span:nth-child(2) {
   border: var(--border);
 }
 
+.perFAQ .jawaban ul li {
+  list-style: decimal;
+  padding: 5px;
+  margin-left: 20px;
+}
+
 .perFAQ .jawaban.show {
   display: inline-block;
 }
@@ -1289,7 +1295,7 @@ footer .container p span {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 50px 0;
+  margin: 60px 0;
 }
 
 .komentar .perKomentar .profil {
@@ -1416,8 +1422,11 @@ footer .container p span {
 }
 
 .profil .container .profil-orang .detail-orang .tentangSaya {
-  margin-top: 20px;
   text-align: left;
+}
+
+.profil .container .profil-orang .detail-orang .tentangSaya h3 {
+  margin-top: 20px;
 }
 
 .profil .container .profil-orang .detail-orang .tentangSaya p {
