--- a/css/style.scss
+++ b/css/style.scss
@@ -414,6 +414,13 @@ header {
         border-radius: 7px;
         border: var(--border);
 
+
+        ul li {
+            list-style: decimal;
+            padding: 5px;
+            margin-left: 20px;
+        }
+
         &.show {
             display: inline-block;
         }
@@ -1197,7 +1204,7 @@ footer {
     .perKomentar {
         display: flex;
         flex-direction: column;
-        margin: 50px 0;
+        margin: 60px 0;
 
         .profil {
             display: flex;
@@ -1319,8 +1326,11 @@ footer {
 
 
                 .tentangSaya {
-                    margin-top: 20px;
                     text-align: left;
+
+                    h3 {
+                        margin-top: 20px;
+                    }
 
                     p {
                         margin-top: 10px;
