Menambahkan GSAP pada HTML

--- a/css/style.scss
+++ b/css/style.scss
@@ -1265,7 +1265,6 @@ footer {
 
     .container {
         display: flex;
-        // align-items: center;
         justify-content: center;
 
         .profil-orang,
@@ -1297,9 +1296,8 @@ footer {
                 align-items: center;
                 justify-content: center;
                 flex-direction: column;
-                text-align: center;
-                // transform: translateY(-80px);
-                margin-top: -80px;
+                text-align: center // transform: translateY(-80px);
+                    margin-top: -80px;
 
                 img {
                     width: 150px;
