--- a/css/riset/riset.scss
+++ b/css/riset/riset.scss
@@ -80,9 +80,11 @@
 }
 
 
+html,
 body {
+    width: 100% !important;
     background-color: var(--putih);
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 
