--- a/css/style.scss
+++ b/css/style.scss
@@ -1296,7 +1296,8 @@ footer {
                 align-items: center;
                 justify-content: center;
                 flex-direction: column;
-                text-align: center // transform: translateY(-80px);
+                text-align: center
+                // transform: translateY(-80px);
                     margin-top: -80px;
 
                 img {
