--- a/css/style.scss
+++ b/css/style.scss
@@ -1,67 +1,3 @@
-#scroll-top {
-    position: fixed;
-    bottom: 1.5rem;
-    right: 1rem;
-    z-index: 1000;
-    transform: translateY(150%);
-    transition: 3s;
-    cursor: pointer;
-}
-
-#scroll-top img {
-    width: 4rem;
-    /* animation: float 3s linear infinite; */
-}
-
-
-#scroll-top.show {
-    transform: translateY(0);
-    transition: 3s;
-}
-
-#scroll-top.show img {
-    animation: float 3s linear infinite;
-}
-
-
-@keyframes float {
-
-    0% {
-        transform: translateY(0rem);
-    }
-
-    50% {
-        transform: translateY(-2rem);
-    }
-
-    100% {
-        transform: translateY(0rem);
-    }
-}
-
-.searchBox {
-
-    form {
-        margin-bottom: 20px;
-    }
-
-    form .form-group .input-group button {
-        width: 20%;
-    }
-
-    .suggesti {
-        display: flex;
-        align-items: flex-start;
-        justify-content: center;
-        flex-direction: column;
-
-        .perSuggesti {
-            padding: 5px;
-        }
-    }
-}
-
-
 header.scroll {
     box-shadow: var(--shadow-header);
 }
@@ -1296,9 +1232,8 @@ footer {
                 align-items: center;
                 justify-content: center;
                 flex-direction: column;
-                text-align: center
-                // transform: translateY(-80px);
-                    margin-top: -80px;
+                text-align: center; // transform: translateY(-80px);
+                margin-top: -80px;
 
                 img {
                     width: 150px;
